[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/voxel_factory/Pix2Vox/dock_exporter.gd" type="Script" id=1]
[ext_resource path="res://addons/voxel_factory/voxel_factory.gd" type="Script" id=2]

[node name="Pix2Vox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -675.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_right = 285.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Button" type="Button" parent="Panel/VBoxContainer/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 270.0
margin_bottom = 60.0
text = "Open file"

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 79.0
margin_right = 285.0
margin_bottom = 407.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/MarginContainer2"]
margin_right = 285.0
margin_bottom = 328.0
expand = true
stretch_mode = 6

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 411.0
margin_right = 285.0
margin_bottom = 461.0
rect_min_size = Vector2( 0, 50 )
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer3"]
margin_left = 15.0
margin_top = 15.0
margin_right = 270.0
margin_bottom = 35.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 45.0
margin_top = 3.0
margin_right = 103.0
margin_bottom = 17.0
text = "Centered"

[node name="OptionButton" type="OptionButton" parent="Panel/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 113.0
margin_right = 210.0
margin_bottom = 20.0
text = "Disabled"
items = [ "Disabled", null, false, 0, null, "XZ", null, false, 1, null, "XYZ", null, false, 2, null ]
selected = 0

[node name="MarginContainer4" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 465.0
margin_right = 285.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 75 )
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Button" type="Button" parent="Panel/VBoxContainer/MarginContainer4"]
margin_left = 15.0
margin_top = 15.0
margin_right = 270.0
margin_bottom = 60.0
text = "Export"

[node name="SaveDialog" type="FileDialog" parent="."]
margin_left = 14.0
margin_top = 90.0
margin_right = 767.0
margin_bottom = 469.0
rect_min_size = Vector2( 200, 340 )
resizable = true
access = 2
filters = PoolStringArray( "*.tres" )
current_dir = "F:/Desktop/VoxShowcase"
current_path = "F:/Desktop/VoxShowcase/"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 14.0
margin_top = 90.0
margin_right = 770.0
margin_bottom = 467.0
window_title = "Open a File"
dialog_text = "Open image"
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "F:/Desktop/VoxShowcase"
current_path = "F:/Desktop/VoxShowcase/"

[node name="VoxelFactory" type="Node" parent="."]
script = ExtResource( 2 )
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/Button" to="." method="_on_OpenButton_Pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer4/Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
